# macos-on-swipe

./: .gitignore  Cargo.toml  README.md  build.rs
Formula/: macos-on-swipe.rb
src/: accessibility.rs  config.rs  gesture.rs  main.rs
