[package]
name = "macos-on-swipe"
version = "0.1.0"
edition = "2021"
description = "Detect three-finger trackpad swipe gestures and execute a script"
license = "MIT"

[dependencies]
# Core Foundation for accessibility APIs
core-foundation = "0.10"

# Home directory detection
dirs = "5.0"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"
